src/ui/sonarr_ui/system/snapshots/managarr__ui__sonarr_ui__system__system_ui_tests__tests__snapshot_tests__popups_over_system_ui_SystemQueuedEvents.snap
---
source: src/ui/sonarr_ui/system/system_ui_tests.rs
expression: output
---
╭  Tasks  ────────────────────────────────────────────────────────────────────────╮╭  Queued Events  ───────────────────────────────────────────────────────────────╮
│Name                   Interval            Last Execution     Next Execution     ││Trigger    Status      Name                Queued        Started     Duration   │
│Backup                 1 hour              now                59 minutes         ││manual     completed   Refresh Monitored D 4 minutes ago 4 minutes a 00:03:03   │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                ╭  Queued Events  ────────────────────────────────────────────────────────────────────────────────╮                                │
│                                │Trigger       Status       Name                     Queued           Started       Duration      │                                │
│                                │manual        completed    Refresh Monitored Downlo 4 minutes ago    4 minutes ago 00:03:03      │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
╰────────────────────────────────│                                                                                                 │────────────────────────────────╯
╭  Logs  ────────────────────────│                                                                                                 │────────────────────────────────╮
│2025-12-16 16:40:59 UTC|INFO|Imp│                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                │                                                                                                 │                                │
│                                ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯                                │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
